--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<title>Ceti Institute</title>
+	<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
+	<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
+	<title>Ceti: A Creative and Emergent Technology Institute</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	
 	<header>
 		<h1>CETI</h1>
-		<h2 class="tagline">a Creative and Emergent Technology Institute</h2>
+		<h2 class="tagline">A Creative and Emergent Technology Institute</h2>
 
 
-<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
+		<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
 
-<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
+		<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
 
-<p>Details coming soon...</p>
+		<p>Details coming soon...</p>
 
-<p>Join us (or contact us for more information) at <a href="mailto:hello@ceti.institute">hello@ceti.institute</a>. </p>
+		<p>Join us (or contact us for more information) at <a href="mailto:hello@ceti.institute">hello@ceti.institute</a>. </p>
 
 		<h2>CETI<br>Access to the Future.</h2>
 
