added link for google fonts. css import too slow.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu:500,700&display=swap" rel="stylesheet">
 	<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
 	<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
 	<title>Ceti: A Creative and Emergent Technology Institute</title>
