futzing with the background image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 		<h2>CETI<br>Access to the Future.</h2>
 
-	<p></p>
+	<img class="bang" src="images/big-bang-blue.png">
+
 </header>
 	<!-- maybe questrial work sans is good but I don't like the capital c. julius sans is nice but capital letters only -->
 </body>
