--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
 
 		<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
-
-		<p>Details coming soon...</p>
-
-		<p>Join us (or contact us for more information) at <a href="mailto:hello@ceti.institute">hello@ceti.institute</a>. </p>
-
-		<h2>CETI<br>Access to the Future.</h2>
-
+		
+		<div class="cta">
+		<h3>Join us, change the future</h3>
+			<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
+		</div>
+<!-- 		<h2>CETI<br>Access to the Future.</h2>
+ -->
 	<img class="bang" src="images/big-bang-blue.png">
 
 </header>
