--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
 		
 		<div class="cta">
-		<h3>Join us, change the future</h3>
+		<h3>Join us</h3>
 			<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
 		</div>
 <!-- 		<h2>CETI<br>Access to the Future.</h2>
