added wlf content

--- a/index.html
+++ b/index.html
@@ -16,21 +16,47 @@
 	<header>
 		<h1>CETI</h1>
 		<h2 class="tagline">A Creative and Emergent Technology Institute</h2>
+		<img class="bang" src="images/big-bang-blue.png">
 
-
-		<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
-
-		<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
+	</header>
+	<main>
 		
-		<div class="cta">
-		<h3>Join us</h3>
-			<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
-		</div>
+		<section class="wlf">
+			<div class="content">
+				<h3>Portland Winter Lights Festival Hackathon<br>
+			January 17th and 18th, 2020</h3>
+				<p>CETI is convening an exceptional group of artists, technologists, architects, hackers, and engineers this January 17th and 18th, for a weekend of creative experiments - an exciting collision of practices, expertise and ideas to spark creativity and bring unique interactive light and sound pieces, immersive experiences, and engaging performances to life. </p>
+			<p class="center"><a class="button" href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="_blank">RSVP through EventBrite</a></p>
+
+
+			
+			</div>
+
+			
+			<div>
+				<a href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="_blank"><img src="images/ceti-img-eventbrite.jpeg"></a>
+
+			<p><strong>Join us</strong> in a family friendly environment on the <strong>evening of Feb  8</strong>, at the Riveter and other sites, for a showcase of the weekend’s one-off creations. Witness the results of these interdisciplinary collaborations and experience the thrill of interacting with the ephemeral works made over the course of the weekend. Engage with thought provoking pieces at the intersection of art and technology and let the finely curated satellite spaces lead you to the waterfront. </p>
+
+			</div>
+
+		</section>
+		<section class="about">
+
+			<h2> About CETI</h2>
+			<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
+
+			<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
+			
+			<div class="cta">
+			<h3>Join us</h3>
+				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
+			</div>
+		</section>
 <!-- 		<h2>CETI<br>Access to the Future.</h2>
  -->
-	<img class="bang" src="images/big-bang-blue.png">
 
-</header>
+
 	<!-- maybe questrial work sans is good but I don't like the capital c. julius sans is nice but capital letters only -->
 </body>
 </html>
