added events page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-	
+	 <nav class="nav">
+        <div class="icon">
+            <div class="hamburger"></div>
+        </div>
+        <div class="menu-mobile">
+            <a href="index.html">Home</a>
+            <a href="winter-light-festival-2020.html">Events</a>
+        </div>          
+    </nav>
+    <nav class="desktop">
+        <div class="menu-desktop">
+            <a href="index.html">Home</a>
+            <a href="winter-light-festival-2020.html">Events</a>
+        </div>
+    </nav>
+
 	<header>
 		<h1>CETI</h1>
 		<h2 class="tagline">A Creative and Emergent Technology Institute</h2>
@@ -21,26 +36,7 @@
 	</header>
 	<main>
 		
-		<section class="wlf">
-			<div class="content">
-				<h3>Portland Winter Lights Festival Hackathon<br>
-			January 17th and 18th, 2020</h3>
-				<p>CETI is convening an exceptional group of artists, technologists, architects, hackers, and engineers this January 17th and 18th, for a weekend of creative experiments - an exciting collision of practices, expertise and ideas to spark creativity and bring unique interactive light and sound pieces, immersive experiences, and engaging performances to life. </p>
-			<p class="center"><a class="button" href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="_blank">RSVP through EventBrite</a></p>
-
-
-			
-			</div>
-
-			
-			<div>
-				<a href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="_blank"><img src="images/ceti-img-eventbrite.jpeg"></a>
-
-			<p><strong>Join us</strong> in a family friendly environment on the <strong>evening of Feb  8</strong>, at the Riveter and other sites, for a showcase of the weekend’s one-off creations. Witness the results of these interdisciplinary collaborations and experience the thrill of interacting with the ephemeral works made over the course of the weekend. Engage with thought provoking pieces at the intersection of art and technology and let the finely curated satellite spaces lead you to the waterfront. </p>
-
-			</div>
-
-		</section>
+		
 		<section class="about">
 
 			<h2> About CETI</h2>
@@ -53,10 +49,7 @@
 				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
 			</div>
 		</section>
-<!-- 		<h2>CETI<br>Access to the Future.</h2>
- -->
-
-
-	<!-- maybe questrial work sans is good but I don't like the capital c. julius sans is nice but capital letters only -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/script.js"> </script>
 </body>
 </html>
