added new about message

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 		<section class="about">
 
 			<h2> About CETI</h2>
-			<p>CETI is a model for advanced/professional education, research, and innovation in creative and emergent technology and design.  Through a carefully woven tapestry of  workshops,  participatory research projects, creative experiments, and collaborative convenings, actions, and conversations, we empower and inspire a diverse community across sectors, disciplines, experiences, and expertise to create imaginative, insightful, and impactful responses to emergent social, environmental,  and technological challenges.</p>
 
-			<p>CETI  offers a vision for lifelong learning, professional development, transformation.  We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future. </p>
+			<p>CETI offers a vision for an inclusive path of lifelong learning and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
 			
 			<div class="cta">
 			<h3>Join us</h3>
