--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         </div>
         <div class="menu-mobile">
             <a href="index.html">Home</a>
-            <a href="winter-light-festival-2020.html">Events</a>
+            <a href="winter-light-festival-2020.html">Winter Light Festival</a>
         </div>          
     </nav>
     <nav class="desktop">
         <div class="menu-desktop">
             <a href="index.html">Home</a>
-            <a href="winter-light-festival-2020.html">Events</a>
+            <a href="wlf2020/index.html">Winter Light Festival</a>
         </div>
     </nav>
 
 	<header>
-		<h1>CETI</h1>
+		<h1>[ CETI ]</h1>
 		<h2 class="tagline">A Creative and Emergent Technology Institute</h2>
-		<img class="bang" src="images/big-bang-blue.png">
+		
 
 	</header>
 	<main>
@@ -39,15 +39,60 @@
 		
 		<section class="about">
 
-			<h2> About CETI</h2>
+			<h2>About CETI</h2>
 
 			<p>CETI offers a vision for an inclusive path of lifelong learning and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
 			
-			<div class="cta">
+			<div class="wlf-link">
+				<h2>Constellations</h2>
+				<h3>CETI WINTER LIGHTS FESTIVAL 2020 HACKATHON</h3>
+				<a href="wlf2020/index.html"><img src="wlf2020/images/banner.jpg"></a>
+				<p>Join us on January 17 and 18th group of artists, technologists, and hackers for a weekend of collaborative creative experiments.</p>
+				<a href="wlf2020/index.html" class="button">Info and Registration</a>
+			</div>
+			<!-- <div class="cta">
 			<h3>Join us</h3>
 				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
-			</div>
+			</div> -->
 		</section>
+		<div class="mailchimp-div">
+			<!-- Begin Mailchimp Signup Form -->
+			<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+			<style type="text/css">
+			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+			/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+			  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+			</style>
+			<div id="mc_embed_signup">
+			<form action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			    <div id="mc_embed_signup_scroll">
+			<h2>Subscribe</h2>
+			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+			<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+			</label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+			</div>
+			<div class="mc-field-group">
+			<label for="mce-FNAME">First Name </label>
+			<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+			</div>
+			<div class="mc-field-group">
+			<label for="mce-LNAME">Last Name </label>
+			<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+			</div>
+			<div id="mce-responses" class="clear">
+			<div class="response" id="mce-error-response" style="display:none"></div>
+			<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_01995859ca60a242158eb0eaf_2404c39c03" tabindex="-1" value=""></div>
+			    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+			    </div>
+			</form>
+			</div>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+			<!--End mc_embed_signup-->
+		</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/script.js"> </script>
 </body>
