--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -20,11 +20,11 @@
     <nav class="hackathon__main_nav">
       <ul class="hackathon__main_nav_list">
         <li class="hackathon__main_nav_item">
-          <a href="hackathon.html" class="hackathon__main_nav_link">Home</a>
+          <a href="../index.html" class="hackathon__main_nav_link">[ <span class="logotype">CETI</span> ]</a>
         </li>
-        <li class="hackathon__main_nav_item">
+        <!-- <li class="hackathon__main_nav_item">
           <a href="#Projects" class="hackathon__main_nav_link">Projects</a>
-        </li>
+        </li> -->
         <li class="hackathon__main_nav_item">
           <a href="#Participants" class="hackathon__main_nav_link">Participants</a>
         </li>
@@ -44,25 +44,18 @@
         <div class="hackathon__info_container hackathon__info_container--standard">
           <div class="hackathon__info_description">
             <p>
-              Lorem ipsum dolor sit amet consectetur <strong>adipisicing elit</strong>. Totam quas corrupti harum. Possimus accusamus doloribus numquam fugiat et. Fugiat quaerat doloribus tempore beatae officia pariatur aliquam vel neque laudantium quas!
-              Modi sunt temporibus odio repellendus excepturi? Iure aut accusamus voluptatum harum quod, quisquam assumenda. Rerum fuga eligendi eius dolore omnis possimus est magni pariatur? Rem illo maiores temporibus illum eum.
-              Neque vel quibusdam dolor, minus laudantium sit quidem quaerat possimus deserunt nisi exercitationem sunt delectus aut numquam sapiente laboriosam rerum? Libero amet nobis natus voluptate modi doloribus eveniet itaque porro.
+              On January 17 and 18th group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
             </p>
             <p>
-              Nihil, dolor facere id iusto alias ducimus velit reprehenderit fugit repellendus mollitia, maxime, et pariatur ipsa quod sunt impedit quaerat assumenda. At pariatur ipsum cum ipsam repellat et aliquam expedita.
-              Iste vel hic quae voluptatum dignissimos, ex expedita tempore adipisci veritatis sequi soluta a doloremque qui cumque fugit, est, ut architecto nam error voluptatibus unde accusamus! Fugiat hic suscipit voluptatibus.
-              Qui tenetur cum perspiciatis minima ipsum ullam sed placeat voluptas nihil rerum eligendi incidunt eum tempora suscipit laudantium mollitia, modi officiis, ut alias obcaecati iste, accusamus corporis. Quaerat, dolorum vero?
+              Join us on the evening of Feb 8 (5pm - 10pmish) for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
             </p>
             <p>
-              Nobis, soluta sapiente nam nesciunt deleniti, libero fugiat porro quas vitae voluptates nulla sit ad odio dignissimos ullam, facilis a error iste magni. Hic qui facilis, libero inventore veritatis voluptates.
-              Voluptate cum animi expedita sed. Ipsum corporis facere vero illo magni, quasi architecto, dicta et placeat ea odit. Officiis error sint nulla reiciendis possimus quae consequatur aperiam nesciunt veritatis odit.
-              Labore consequuntur aliquam, ipsum libero nobis natus recusandae quas unde excepturi sed magnam illo dicta iste eum vitae voluptatibus aut quod numquam nihil quam! Itaque, repellendus doloribus. Exercitationem, incidunt vel?
+              We'll be at the Riveter, 11:11 Supply, and Kex Portland.  Details to follow...
             </p>
             <p>
-              Necessitatibus tempora autem alias odit animi libero inventore illum tenetur possimus fugit repellendus nam sunt cupiditate sequi quis ullam error, eveniet magni quisquam sit aliquam dolorem quae id quas? Officiis.
-              Laudantium iusto animi, libero autem molestias eos eligendi obcaecati magnam suscipit qui similique impedit aspernatur eaque officia dolore rerum rem ipsam, labore quisquam praesentium fuga in temporibus. Iusto, magni commodi.
-              Sint quo non molestiae nisi numquam id autem at vero ea consequuntur quisquam aliquid quibusdam praesentium eaque, excepturi facere aut doloremque quod sit perferendis architecto necessitatibus voluptate expedita dolorum? Deserunt!
+              Sign up <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank">to attend the show</a> and to find out about our future convenings.
             </p>
+            <p>Questions? Contact us <a href="mailto:contact@ceti.institute">contact@ceti.institute</a></p>
           </div>
           <aside class="hackathon__info_sidebar">
             <div class="hackathon__info_map_container">
@@ -81,7 +74,7 @@
           </aside>
         </div>
       </section>
-      <section id="Projects" class="hackathon__section hackathon__section--projects">
+      <!-- <section id="Projects" class="hackathon__section hackathon__section--projects">
         <h3 class="hackathon__section_title">Projects</h3>
         <div class="hackathon__projects_container">
           
@@ -100,31 +93,31 @@
             
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="Partners" class="hackathon__section hackathon__section--partners">
         <h3 class="hackathon__section_title">Partners</h3>
         <div class="hackathon__partners_container">
           <ul class="hackathon__partners_list">
             <li class="hackathon__partner_item">
-              <a href="" class="hackathon__partner_link">
-                <img src="images/partners/01.jpg" alt="Partner Logo" class="hackathon__partner_image">
+              <a href="https://kexhotels.com/" class="hackathon__partner_link" target="_blank">
+                <img src="images/partners/kex.png" alt="Partner Logo" class="hackathon__partner_image">
               </a>
             </li>
             <li class="hackathon__partner_item">
-              <a href="" class="hackathon__partner_link">
-                <img src="images/partners/01.jpg" alt="Partner Logo" class="hackathon__partner_image">
+              <a href="https://theriveter.co/" class="hackathon__partner_link" target="_blank">
+                <img src="images/partners/riveter.svg" alt="Partner Logo" class="hackathon__partner_image">
               </a>
             </li>
             <li class="hackathon__partner_item">
+              <a href="https://www.1111supply.com/" class="hackathon__partner_link" target="blank">
+                <img src="images/partners/1111logo_380x.png" alt="Partner Logo" class="hackathon__partner_image">
+              </a>
+            </li>
+            <!-- <li class="hackathon__partner_item">
               <a href="" class="hackathon__partner_link">
                 <img src="images/partners/01.jpg" alt="Partner Logo" class="hackathon__partner_image">
               </a>
-            </li>
-            <li class="hackathon__partner_item">
-              <a href="" class="hackathon__partner_link">
-                <img src="images/partners/01.jpg" alt="Partner Logo" class="hackathon__partner_image">
-              </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
