added back list of participants. still need to fix things.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="menu-mobile">
             <a href="index.html">Home</a>
-            <a href="winter-light-festival-2020.html">Winter Light Festival</a>
+            <a href="winter-light-festival-2020.html">Winter Lights Festival</a>
         </div>          
     </nav>
     <nav class="desktop">
@@ -45,7 +45,7 @@
 			
 			<div class="wlf-link">
 				<h2>Constellations</h2>
-				<h3>CETI WINTER LIGHTS FESTIVAL 2020 HACKATHON</h3>
+				<h3>CETI WINTER LIGHTS FESTIVAL 2020</h3>
 				<a href="wlf2020/index.html"><img src="wlf2020/images/banner.jpg"></a>
 				<p>Join us on January 17 and 18th group of artists, technologists, and hackers for a weekend of collaborative creative experiments.</p>
 				<a href="wlf2020/index.html" class="button">Info and Registration</a>
@@ -90,10 +90,11 @@
 			    </div>
 			</form>
 			</div>
-			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+			
 			<!--End mc_embed_signup-->
 		</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/script.js"> </script>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 </body>
 </html>
