add placeholder event image. Cap image sizes at 100% of container width

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -37,14 +37,24 @@
       <section id="Info" class="hackathon__section hackathon__section--info">
         <hgroup class="hackathaon__section_group">
           <h3 class="hackathon__section_title">Event Information</h3>
-          <h4 class="hackathon__section_subtitle">January 17-18, 2020<br />
-            <a href="https://theriveter.co/" target="_blank">Riveter, Revolution Hall</a>
-          </h4>
+          <h4 class="hackathon__section_subtitle">February 8, 2020</h4>
         </hgroup>
         <div class="hackathon__info_container hackathon__info_container--standard">
           <div class="hackathon__info_description">
+            <p><strong>Location List:</strong></p>
+            <ul class="location__list">
+              <li class="location__list_item">
+                <a href="http://theriveter.co" class="location__list_link">The Riveter</a>
+              </li>
+              <li class="location__list_item">
+                <a href="https://www.kexhostel.is/" class="location__list_link">Kex Hostel</a>
+              </li>
+              <li class="location__list_item">
+                <a href="http://1111supply.com" class="location__list_link">11:11 Supply</a>
+              </li>
+            </ul>
             <p>
-              On January 17 and 18th group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
+              On January 17 and 18th a group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
             </p>
             <p>
               Join us on the evening of Feb 8 (5pm - 10pmish) for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
@@ -58,7 +68,7 @@
             <p>Questions? Contact us <a href="mailto:contact@ceti.institute">contact@ceti.institute</a></p>
           </div>
           <aside class="hackathon__info_sidebar">
-            <div class="hackathon__info_map_container">
+            <!--<div class="hackathon__info_map_container">
               <div class="hackathon__info_map">
                 <iframe class="hackathon__map_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJu6-L6pehlVQR9CHtwHlKhbw&key=AIzaSyCz5fYcmFuCORKGXSGu4IwKq3U_HfcdDtA&zoom=14" allowfullscreen></iframe>
               </div>
@@ -70,7 +80,8 @@
                   10-7pm Saturday
                 </p>
               </div>
-            </div>
+            </div>-->
+            <img src="images/event-image.jpg" alt="Event Image">
           </aside>
         </div>
       </section>
