hide projects for now

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -127,12 +127,12 @@
           </ul>
         </div>
       </section>
-      <!-- <section id="Projects" class="hackathon__section hackathon__section--projects">
+      <section id="Projects" class="hackathon__section hackathon__section--projects">
         <h3 class="hackathon__section_title">Previous Projects From 2019 Winter Lights Festival</h3>
         <div class="hackathon__projects_container">
           
         </div>
-      </section> -->
+      </section>
     </main>
     <footer class="hackathon__footer">
       <nav class="hackathon__footer_nav">
