added background image and restyled homepage.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu:500,700&display=swap" rel="stylesheet">
 	<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
 	<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
-	<title>Ceti: A Creative and Emergent Technology Institute</title>
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="libraries/magnific/magnific-popup.css">
+	
+	<title>Ceti: A Creative and Emergent Technology Institute</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	 <nav class="nav">
+	<nav class="nav">
         <div class="icon">
             <div class="hamburger"></div>
         </div>
@@ -27,26 +29,46 @@
             <a href="wlf2020/index.html">Winter Light Festival</a>
         </div>
     </nav>
-
-	<header>
-		<h1>[ CETI ]</h1>
-		<h2 class="tagline">A Creative and Emergent Technology Institute</h2>
-		
-
+	<div class="hero">
+		<header class="branding">
+		<h1 id="logo">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 225.88 221.78"><title>Asset 4</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path fill="url(#skyGradient)" d="M0,110.6c7.38-.4,14.76-.71,22.13-1.22,17.93-1.23,35.9-2.14,53.61-5.41,6.91-1.28,13.62-3.62,20.42-5.49,2.35-.64,3.64-2.23,4.48-4.5a125.19,125.19,0,0,0,7-30.81q2.12-20.85,3.82-41.74c.53-6.38.69-12.79,1-19.19A3.49,3.49,0,0,1,113.23,0c.09,1,.19,2,.26,2.94,1.38,19,2.46,38,4.25,57,1.12,12,3.31,23.88,8,35.12a5.64,5.64,0,0,0,2.59,2.69,85.84,85.84,0,0,0,25.41,6.78c13.54,1.67,27.13,3,40.72,4.12,10.27.88,20.59,1.32,30.89,2,.12,0,.23.16.56.39-11.74.71-23.3,1.18-34.81,2.16q-19.14,1.62-38.22,4a94.45,94.45,0,0,0-24.69,6.6,4.41,4.41,0,0,0-2.3,2.39c-2.07,7.16-4.38,14.29-5.81,21.58-1.63,8.31-2.69,16.76-3.5,25.2-1,10.18-1.43,20.42-2.12,30.63-.41,6-.85,12.08-1.79,18.16-.2-2.89-.39-5.78-.59-8.66-1-13.11-1.74-26.23-2.89-39.31a256.93,256.93,0,0,0-3.24-26c-1.42-7.37-4-14.53-6.21-21.72A5,5,0,0,0,97,123.65c-12.5-5.19-25.75-7.15-39.08-8.43-12.84-1.22-25.72-2-38.59-3-6.44-.47-12.88-.89-19.32-1.33Z"/><path fill="url(#skyGradient)" d="M42.12,86.2q-18.93,0-28.84-10.52T3.36,45.77a45.9,45.9,0,0,1,3-17.19,36.94,36.94,0,0,1,8.29-12.77A34.66,34.66,0,0,1,27.22,7.92,45.06,45.06,0,0,1,43,5.23,50.15,50.15,0,0,1,52,6,56.32,56.32,0,0,1,59,7.64a33.93,33.93,0,0,1,5,2q2,1,2.91,1.56l-5,14.12A41.92,41.92,0,0,0,53.6,22a39.71,39.71,0,0,0-10.81-1.35A23.81,23.81,0,0,0,34.89,22a17.81,17.81,0,0,0-6.83,4.31A21.45,21.45,0,0,0,23.3,34a32.35,32.35,0,0,0-1.79,11.43,41,41,0,0,0,1.17,10,21.42,21.42,0,0,0,3.81,8,18.34,18.34,0,0,0,6.89,5.32,24.46,24.46,0,0,0,10.3,2,46.89,46.89,0,0,0,6.84-.45,51.58,51.58,0,0,0,5.37-1.06A28.7,28.7,0,0,0,60,67.84c1.19-.52,2.27-1,3.24-1.46l4.82,14a40.71,40.71,0,0,1-10.42,4A60.46,60.46,0,0,1,42.12,86.2Z"/><path fill="url(#skyGradient)" d="M167.42,84.64V7h52.42V21.69H184.9V36.92h31V51.26h-31V70h37.52V84.64Z"/><path fill="url(#skyGradient)" d="M66.2,135.43v14.9H42.79v62.72H25.32V150.33H1.91v-14.9Z"/><path fill="url(#skyGradient)" d="M188.66,135.43h17.48v77.62H188.66Z"/></g></g>
+				<defs>
+				    <linearGradient id="skyGradient" x1="100%" y1="100%">
+				      <stop offset="0%" stop-color="lightblue" stop-opacity=".5">
+				        <animate attributeName="stop-color" values="lightblue;blue;red;red;black;red;red;purple;lightblue" dur="14s" repeatCount="indefinite" />
+				      </stop>
+				      <stop offset="100%" stop-color="lightblue" stop-opacity=".5">
+				        <animate attributeName="stop-color" values="lightblue;orange;purple;purple;black;purple;purple;blue;lightblue" dur="14s" repeatCount="indefinite" />
+				        <animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95" dur="14s" repeatCount="indefinite" />
+				      </stop>
+				    </linearGradient>
+				</defs>
+			</svg>
+			<!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
+		</h1>
 	</header>
+
+	</div>
+	 
+
+	
 	<main>
 		
-		
 		<section class="about">
-
-			<h2>About CETI</h2>
+			<div>
+			<h2>About CETI: A Creative and Emergent Technology Institute</h2>
 
 			<p>CETI offers a vision for an inclusive path of lifelong learning and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
+			<a class="button popup-with-form" href="#subscribe-form" data-effect="mfp-zoom-in">Join Our Mailing List</a>
+		</div>
+		</section>
 			
-			<div class="wlf-link">
+		<section class="wlf-link">
+			<div>
 				<h2>Constellations</h2>
 				<h3>CETI WINTER LIGHTS FESTIVAL 2020</h3>
-				<a href="wlf2020/index.html"><img src="wlf2020/images/banner.jpg"></a>
+				<a href="wlf2020/index.html"><img src=""></a>
 				<p>Join us on January 17 and 18th group of artists, technologists, and hackers for a weekend of collaborative creative experiments.</p>
 				<a href="wlf2020/index.html" class="button">Info and Registration</a>
 			</div>
@@ -55,14 +77,11 @@
 				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
 			</div> -->
 		</section>
-		<div class="mailchimp-div">
+		
+
+		<div id="subscribe-form" class="white-popup-block mfp-hide">
 			<!-- Begin Mailchimp Signup Form -->
-			<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-			<style type="text/css">
-			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-			/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-			  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-			</style>
+			<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 			<div id="mc_embed_signup">
 			<form action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			    <div id="mc_embed_signup_scroll">
@@ -94,7 +113,10 @@
 			<!--End mc_embed_signup-->
 		</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="js/script.js"> </script>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<script src="libraries/magnific/jquery.magnific-popup.min.js"></script>
+<script src="libraries/parallax/parallax.min.js"></script>
+<script src="js/script.js"></script>
+<!-- mailchimp -->
+<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 </body>
 </html>
