--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -20,7 +20,7 @@
     <nav class="hackathon__main_nav">
       <ul class="hackathon__main_nav_list">
         <li class="hackathon__main_nav_item">
-          <a href="../index.html" class="hackathon__main_nav_link">[ <span class="logotype">CETI</span> ]</a>
+          <a href="../index.html" class="hackathon__main_nav_link">Home</a>
         </li>
         <!-- <li class="hackathon__main_nav_item">
           <a href="#Projects" class="hackathon__main_nav_link">Projects</a>
