added and sponsors to the header

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -86,7 +86,7 @@
         </div>
       </section>
       <section id="Partners" class="hackathon__section hackathon__section--partners">
-        <h3 class="hackathon__section_title">Partners</h3>
+        <h3 class="hackathon__section_title">Partners and Sponsors</h3>
         <div class="hackathon__partners_container">
           <ul class="hackathon__partners_list">
             <li class="hackathon__partner_item">
