--- a/press/branding.html
+++ b/press/branding.html
@@ -67,7 +67,7 @@
 		</div>
 
 		<p><a href="ceti-branding-v1.zip">Zip file of logos for download</a></p>
-		<p>The above .zip file contains logo assets in .png, .svg, and .eps formats for both the white on black and black on white logos. Contact <a href="mailto:alanna@alannarisse.com">If you need another version</a></p>
+		<p>The above .zip file contains logo assets in .png, .svg, and .eps formats for the white on black and black on white logos and an svg file for the multicolor logo. Contact <a href="mailto:alanna@alannarisse.com">alanna@alannarisse.com</a> If you need another version</a></p>
 		
 
 
