added some mobile love to homepage and wlf page. also added a couple more past images from last years wlf

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -97,7 +97,11 @@
                 </p>
               </div>
             </div>-->
+            <img src="images/past-projects/Mallory2.png" alt="Mallory">
             <img src="images/event-image.jpg" alt="Event Image">
+            <!-- <img src="images/past-projects/allison_1.jpg" alt="Allison"> -->
+            <img src="images/past-projects/monica_3.jpg" alt="Monica">
+            
           </aside>
         </div>
       </section>
