added more verbage

--- a/press/branding.html
+++ b/press/branding.html
@@ -66,7 +66,7 @@
 			<div><img src="ceti-branding-v1/ceti-logo-v1-blk.png" alt="ceti black logo"><p>Ceti white on black</p></div>
 		</div>
 
-		<p><a href="ceti-branding-v1.zip">Right-click this link to download a .zip file of logos</a></p>
+		<p><a href="ceti-branding-v1.zip">Right-click this link and choose “Save link as…” to download a .zip file of logos</a></p>
 		<p>The above .zip file contains logo assets in .png, .svg, and .eps formats for the white on black and black on white logos and an svg file for the multicolor logo. Contact <a href="mailto:alanna@alannarisse.com">alanna@alannarisse.com</a> If you need another version.</a></p>
 		
 
