added a link to the participation eventbrite link, and noodled a bunch on designs.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 				<p><a class="button" href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
 			</div> -->
 		</section>
+		<section class="contributors">
+			<p>The design, development, visuals, and branding for CETI were created by the following contributors: Hilary Tsai, Nyssa Oru, Stephen Lee, Mike Heavers, Alanna Risse, Scott Garner.</p>
+		</section>
 		
 
 		<div id="subscribe-form" class="white-popup-block mfp-hide">
