--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>CETI Winter Lights Festival 2020 | Project</title>
+  <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR.">
+  <title>CETI Winter Lights Festival 2020 | Portland, OR</title>
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
@@ -52,36 +53,41 @@
     <main class="hackathon__main">
       <section id="Info" class="hackathon__section hackathon__section--info">
         <hgroup class="hackathaon__section_group">
-          <h3 class="hackathon__section_title">Event Information</h3>
-          <h4 class="hackathon__section_subtitle">February 8, 2020</h4>
+          <h3 class="hackathon__section_title">February 8, 2020</h3>
+          <h4 class="hackathon__section_subtitle">CETI at Portland Winter Light Festival</h4>
         </hgroup>
         <div class="hackathon__info_container hackathon__info_container--standard">
           <div class="hackathon__info_description">
-            <p><strong>Location List:</strong></p>
+            <p style="margin-top:0;">
+              On January 17 and 18th a group of artists, technologists, and hackers will gather at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life. 
+            </p>
+            <p>
+              Join us on the evening of <strong>Feb 8 (5pm - 10pmish)</strong> for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
+            </p>
+            <div class="location">
+            <p><strong>We'll be sharing our projects at the following locations:</strong></p>
             <ul class="location__list">
               <li class="location__list_item">
-                <a href="http://theriveter.co" class="location__list_link">The Riveter</a>
+                <a href="http://theriveter.co" class="location__list_link"><img src="images/riveter_photo.jpg" alt="The Riveter Co-Working Space in Portland OR"></a>
+                <a href="http://theriveter.co" class="location__list_link">The Riveter<br>
+                501 SE 14th Ave</a>
               </li>
               <li class="location__list_item">
-                <a href="https://www.kexhostel.is/" class="location__list_link">Kex Hostel</a>
+                <img src="images/kexhostel_photo2.jpg"><a href="https://www.kexhostel.is/" class="location__list_link" alt="KEX Hostel in Portland Oregon">Kex Hostel<br>
+                100 NE Martin Luther King Jr Blvd</a>
               </li>
               <li class="location__list_item">
-                <a href="http://1111supply.com" class="location__list_link">11:11 Supply</a>
+                <img src="images/11supply_photo.jpeg" alt="11:11 Supply in Portland's Fair-Haired Dumbbell building"><a href="http://1111supply.com" class="location__list_link">11:11 Supply<br>
+                33 NE Martin Luther King Jr Blvd</a>
               </li>
             </ul>
+            </div>
             <p>
-              On January 17 and 18th a group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
+              <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank" class="button">Attend the Show</a> <a href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="blank" class="button">Create and Participate!</a>
             </p>
-            <p>
-              Join us on the evening of Feb 8 (5pm - 10pmish) for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
-            </p>
-            <p>
-              We'll be at the Riveter, 11:11 Supply, and Kex Portland.  Details to follow...
-            </p>
-            <p>
-              Sign up <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank">to attend the show</a> and to find out about our future convenings.
-            </p>
+            <br><br>
             <p>Questions? Contact us <a href="mailto:contact@ceti.institute">contact@ceti.institute</a></p>
+            <p><a href="https://www.pdxwlf.com/" target="_blank"><img src="images/PDXWLF-RipplesLogo-2020-Black.png" alt="Portland Winter Light Festival" class="wlflogo"></a></p>
           </div>
           <aside class="hackathon__info_sidebar">
             <!--<div class="hackathon__info_map_container">
@@ -97,9 +103,10 @@
                 </p>
               </div>
             </div>-->
+            <h3 class="hackathon__section_title">Images From 2019 Winter Lights Festival</h3>
             <img src="images/past-projects/Mallory2.png" alt="Mallory">
             <img src="images/event-image.jpg" alt="Event Image">
-            <!-- <img src="images/past-projects/allison_1.jpg" alt="Allison"> -->
+            <img src="images/past-projects/allison_1.jpg" alt="Allison">
             <img src="images/past-projects/monica_3.jpg" alt="Monica">
             
           </aside>
