ok really going to bed now

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -59,10 +59,13 @@
         <div class="hackathon__info_container hackathon__info_container--standard">
           <div class="hackathon__info_description">
             <p style="margin-top:0;">
-              On January 17 and 18th a group of artists, technologists, and hackers will gather at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life. 
+              On January 17 and 18th a group of artists, technologists, and hackers will gather at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.
             </p>
             <p>
               Join us on the evening of <strong>Feb 8 (5pm - 10pmish)</strong> for a thrilling show of the weekend’s interdisciplinary collaborations at satellite spaces to the Portland Winter Light festival. Invite family and friends.
+            </p>
+            <p>
+              <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank" class="button">Attend the Show</a> &nbsp;&nbsp;<a href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="blank" class="button">Create and Participate!</a>
             </p>
             <div class="location">
             <p><strong>We'll be sharing our projects at the following locations:</strong></p>
@@ -82,10 +85,7 @@
               </li>
             </ul>
             </div>
-            <p>
-              <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank" class="button">Attend the Show</a> <a href="https://www.eventbrite.com/e/ceti-arttech-collaborative-experiments-tickets-81251183477" target="blank" class="button">Create and Participate!</a>
-            </p>
-            <br><br>
+            
             <p>Questions? Contact us <a href="mailto:contact@ceti.institute">contact@ceti.institute</a></p>
             <p><a href="https://www.pdxwlf.com/" target="_blank"><img src="images/PDXWLF-RipplesLogo-2020-Black.png" alt="Portland Winter Light Festival" class="wlflogo"></a></p>
           </div>
