--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -104,7 +104,7 @@
               </div>
             </div>-->
             <h3 class="hackathon__section_title">Images From 2019 Winter Lights Festival</h3>
-            <img src="images/past-projects/Mallory2.png" alt="Mallory">
+            <img src="images/past-projects/Mallory2.jpg" alt="Mallory">
             <img src="images/event-image.jpg" alt="Event Image">
             <img src="images/past-projects/allison_1.jpg" alt="Allison">
             <img src="images/past-projects/monica_3.jpg" alt="Monica">
