added psugd logo.

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -141,9 +141,15 @@
                 <img src="images/partners/reverendnats.png" alt="Reverend Nat's" class="hackathon__partner_image">
               </a>
             </li>
+ 
             <li class="hackathon__partner_item">
               <a href="http://www.uprightbrewing.com/" class="hackathon__partner_link"  target="_blank">
                 <img src="images/partners/uprightbrewing.png" alt="Upright Brewing" class="hackathon__partner_image">
+              </a>
+            </li>
+            <li class="hackathon__partner_item">
+              <a href="http://www.psu.gd/" class="hackathon__partner_link"  target="_blank">
+                <img src="images/partners/psugd.svg" alt="Upright Brewing" style="height:100px;" class="hackathon__partner_image">
               </a>
             </li>
           </ul>
